--- a/website1/templates/website1.html
+++ b/website1/templates/website1.html
@@ -38,8 +38,8 @@
     <div class="painel">
 
 
-        <video  type="video/mp4" class="desktop-video" autoplay muted loop poster="{% static 'img/desktop.png' %}">
-            <source src="{% static 'img/desktop.mp4' %}" type="video/mp4">
+        <video  type="video/webm" class="desktop-video" autoplay muted loop poster="{% static 'img/desktop.png' %}">
+            <source src="{% static 'img/desktop.webm' %}" type="video/webm">
             Seu navegador não suporta o elemento de vídeo.
         </video>
         <video type="video/mp4" class="mobile-video" autoplay muted loop>
