--- a/website1/templates/website1.html
+++ b/website1/templates/website1.html
@@ -39,11 +39,11 @@
 
 
         <video  type="video/webm" class="desktop-video" autoplay muted loop poster="{% static 'img/desktop.png' %}">
-            <source src="{% static 'img/desktop.webm' %}" type="video/webm">
+            <source src="https://play.spincasino.com/spc/content/shared/videos/wave/wolf_blaze_wowpot/desktop.mp4" type="video/webm">
             Seu navegador não suporta o elemento de vídeo.
         </video>
         <video type="video/mp4" class="mobile-video" autoplay muted loop>
-            <source src="{% static 'img/mobile.mp4' %}" type="video/mp4">
+            <source src="https://play.spincasino.com/spc/content/shared/videos/wave/wolf_blaze_wowpot/mobile.mp4" type="video/mp4">
             Seu navegador não suporta o elemento de vídeo.
         </video>
     </div>
