--- a/website1/templates/website1.html
+++ b/website1/templates/website1.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -6,11 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'styles.css' %}">
     <link rel="stylesheet" href="{% static 'media.css' %}">
-    <style>
-        
-    </style>
+    <title>150% BÔNUS DEPÓSITO</title>
+    <link rel="icon" href="{% static 'img/game_1.jpeg' %}" type="image/x-icon" sizes="16x16 32x32">
+
 </head>
 <body>
+
     <nav>
         <div class="fixed-div">
             <div class="marquee" id="nomes-aleatorios">
@@ -19,12 +21,23 @@
         </div>
     </nav>
     <div class="espaco-mobile">
+        <img src="{% static 'img/mobile.jpg' %}" alt="" srcset="">
+        
+        <a href="https://solcasino.life/cb2ab781a">
+            <div class="reg-mobile">
+                <img src="{% static 'img/wolf_blaze_ticker.png' %}" alt="" srcset="">
+                <input type="button" value="REGISTRAR-SE">
+            </div>
+        </a>
+
+
+    </div>
         <div class="texto-sobre-video">
             <p class="oferta">Oferta Exclusiva<br>
                 
-                <p style="font-size: 40px;">150% DE BÔNUS <br> DE DEPÓSITO <br></p>
+                <b style="font-size: 40px; margin:0;">150% DE BÔNUS <br> DE DEPÓSITO</p>
                 <p class="bonus">+75 giros de GRAÇA! </p>
-                <a href="https://solcasino.life/cb2ab781a ">
+                <a href="https://solcasino.life/cb2ab781a">
                     <div class="reg">
                         <img src="{% static 'img/wolf_blaze_ticker.png' %}" alt="" srcset="">
                         <input type="button" value="REGISTRAR-SE">
@@ -32,13 +45,15 @@
                 </a>
 
             </p>
-            <div class="espaco"></div>
+            <div class="espaco">
+                
+            </div>
         </div>
-    </div>
+    </b>
     <div class="painel">
 
 
-        <video  type="video/webm" class="desktop-video" autoplay muted loop poster="{% static 'img/desktop.png' %}">
+        <video  type="video/webm" class="desktop-video" autoplay muted loop >
             <source src="https://play.spincasino.com/spc/content/shared/videos/wave/wolf_blaze_wowpot/desktop.mp4" type="video/webm">
             Seu navegador não suporta o elemento de vídeo.
         </video>
