--- a/website1/templates/website1.html
+++ b/website1/templates/website1.html
@@ -20,6 +20,8 @@
     src="https://www.facebook.com/tr?id=3071007549701397&ev=PageView&noscript=1"
     /></noscript>
     <!-- End Meta Pixel Code -->
+
+</head>
 <body>
 
     <nav>
