--- a/website1/templates/index.html
+++ b/website1/templates/index.html
@@ -25,6 +25,9 @@
         src="https://www.facebook.com/tr?id=3071007549701397&ev=PageView&noscript=1"
         /></noscript>
         <!-- End Meta Pixel Code -->
+        <script>
+  fbq('track', 'ViewContent');
+</script>
     </head>
     
 <body>
