--- a/static/styles.css
+++ b/static/styles.css
@@ -246,3 +246,31 @@ footer{
   .reg-mobile{
     display: none;
   }
+
+input {
+    display: none;
+    position: relative;
+    margin-bottom: 20%;
+    background-color: #fff;
+    display: block;
+    align-items: center;
+    justify-content: center; /* Centraliza horizontalmente */
+    margin: 0 auto;
+    width: 70%;
+    min-height: 20%;
+    text-align: center; /* Centraliza horizontalmente (opcional) */
+    line-height: normal; /* Redefine a altura da linha para centralizar verticalmente */
+    border-radius: 10px;
+    border: 0;
+    font-family: Arial, sans-serif;
+    font-size: 16px;
+    z-index: 99999999999999;
+  }
+.reg-mobil3 a {
+    display: none;
+    text-decoration: none;
+}  
+
+.reg-mobil3{
+    display: none;
+}
