fixed bug ca pixel

--- a/website2/templates/ca.html
+++ b/website2/templates/ca.html
@@ -34,7 +34,7 @@
                 
                 <b style="font-size: 40px; margin:0;">100% BONUS <br> OF DEPOSIT</p>
                 <p class="bonus">+75 FREE spins! </p>
-                <a href="{% url 'pixel' %}">
+                <a href="{% url 'pixel2' %}">
                     <div class="reg">
                         <img src="{% static 'img/wolf_blaze_ticker.png' %}" alt="" srcset="">
                         <input type="button" value="REGISTER">
