added new pixel

--- a/website1/templates/pixel.html
+++ b/website1/templates/pixel.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="https://pagelink.site/img/shield.svg" />
     <link rel="stylesheet" href="https://pagelink.site/css/pagelink-style.css?v=2">
 
+<!-- Meta Pixel Code -->
 <script>
     !function(f,b,e,v,n,t,s)
     {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -17,13 +18,13 @@
     t.src=v;s=b.getElementsByTagName(e)[0];
     s.parentNode.insertBefore(t,s)}(window, document,'script',
     'https://connect.facebook.net/en_US/fbevents.js');
-    fbq('init', '261938923276163');
+    fbq('init', '1277211299586951');
     fbq('track', 'PageView');
-    fbq('track', 'ViewContent');
     </script>
     <noscript><img height="1" width="1" style="display:none"
-    src="https://www.facebook.com/tr?id=261938923276163&ev=PageView&noscript=1"
+    src="https://www.facebook.com/tr?id=1277211299586951&ev=PageView&noscript=1"
     /></noscript>
+    <!-- End Meta Pixel Code -->
     
 </head>
 <body>
