--- a/website2/templates/ca.html
+++ b/website2/templates/ca.html
@@ -23,7 +23,7 @@
     <div class="espaco-mobile">
         <img src="{% static 'img/mobile-ca.png' %}" alt="" srcset="">
         
-        <a class="reg-mobil3" href="{% url 'pixel2' %}">
+        <a class="reg-mobil3" href="https://stardacasino.life/c447920d3">
             <input type="button" value="REGISTER">
         </a>
 
