--- a/website1/templates/pt.html
+++ b/website1/templates/pt.html
@@ -28,6 +28,28 @@
     &noscript=1"/>
     </noscript>
     <!-- End Facebook Pixel Code -->
+
+<!-- Facebook Pixel Code -->
+<script>
+    !function(f,b,e,v,n,t,s)
+    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+    n.queue=[];t=b.createElement(e);t.async=!0;
+    t.src=v;s=b.getElementsByTagName(e)[0];
+    s.parentNode.insertBefore(t,s)}(window,document,'script',
+    'https://connect.facebook.net/en_US/fbevents.js');
+     fbq('init', '3071007549701397'); 
+    fbq('track', 'PageView');
+    
+    </script>
+    <noscript>
+     <img height="1" width="1" 
+    src="https://www.facebook.com/tr?id=3071007549701397&ev=PageView
+    &noscript=1"/>
+    </noscript>
+    <!-- End Facebook Pixel Code -->
+
     </head>
     
 <body>
@@ -42,7 +64,7 @@
     <div class="espaco-mobile">
         <img src="{% static 'img/mobile.jpg' %}" alt="" srcset="">
         
-        <a class="reg-mobil3" href="{% url 'pixel' %}">
+        <a class="reg-mobil3" href="https://stardacasino.life/c447920d3">
             <input type="button" value="REGISTRAR-SE">
         </a>
 
@@ -55,7 +77,7 @@
                 
                 <b style="font-size: 40px; margin:0;">150% DE BÔNUS <br> DE DEPÓSITO</p>
                 <p class="bonus">+75 giros de GRAÇA! </p>
-                <a href="{% url 'pixel' %}">
+                <a href="https://stardacasino.life/c447920d3">
                     <div class="reg">
                         <img src="{% static 'img/wolf_blaze_ticker.png' %}" alt="" srcset="">
                         <input type="button" value="REGISTRAR-SE">
@@ -71,7 +93,7 @@
     <div class="painel">
 
 
-        <video  type="video/webm" class="desktop-video" autoplay muted loop >
+        <video  type="video/webm" class="desktop-video" autoplay muted loop poster="{% static 'img/poster.png' %}" >
             <source src="https://play.spincasino.com/spc/content/shared/videos/wave/wolf_blaze_wowpot/desktop.mp4" type="video/webm">
             Seu navegador não suporta o elemento de vídeo.
         </video>
@@ -156,7 +178,7 @@
         </div>
     </center>
     <footer>
-        <p>© 2023 Playspot. Todos os direitos reservados.</p>
+        <p>© 2024 Playspot. Todos os direitos reservados.</p>
     </footer>
     <script>
         var nomes = [
