fix pixel viewcontent

--- a/website2/templates/sol.html
+++ b/website2/templates/sol.html
@@ -20,7 +20,7 @@
     s.parentNode.insertBefore(t,s)}(window,document,'script',
     'https://connect.facebook.net/en_US/fbevents.js');
      fbq('init', '3071007549701397'); 
-    fbq('track', 'ViewContent');
+    fbq('track', 'PageView');
     </script>
     <noscript>
      <img height="1" width="1" 
@@ -40,7 +40,7 @@
     s.parentNode.insertBefore(t,s)}(window,document,'script',
     'https://connect.facebook.net/en_US/fbevents.js');
      fbq('init', '3071007549701397'); 
-    fbq('track', 'PageView');
+    fbq('track', 'ViewContent');
     
     </script>
     <noscript>
@@ -64,7 +64,7 @@
     <div class="espaco-mobile">
         <img src="{% static 'img/mobile.jpg' %}" alt="" srcset="">
         
-        <a class="reg-mobil3" href="https://stardacasino.life/c447920d3">
+        <a class="reg-mobil3" href="https://solcasino.life/cb2ab781a">
             <input type="button" value="REGISTRAR-SE">
         </a>
 
@@ -77,7 +77,7 @@
                 
                 <b style="font-size: 40px; margin:0;">150% DE BÔNUS <br> DE DEPÓSITO</p>
                 <p class="bonus">+75 giros de GRAÇA! </p>
-                <a href="https://stardacasino.life/c447920d3">
+                <a href="https://solcasino.life/cb2ab781a">
                     <div class="reg">
                         <img src="{% static 'img/wolf_blaze_ticker.png' %}" alt="" srcset="">
                         <input type="button" value="REGISTRAR-SE">
