--- a/website2/templates/sol.html
+++ b/website2/templates/sol.html
@@ -11,6 +11,7 @@
     <link rel="icon" href="{% static 'img/game_1.jpeg' %}" type="image/x-icon" sizes="16x16 32x32">
 
 
+<!-- Meta Pixel Code -->
 <script>
     !function(f,b,e,v,n,t,s)
     {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -18,18 +19,15 @@
     if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
     n.queue=[];t=b.createElement(e);t.async=!0;
     t.src=v;s=b.getElementsByTagName(e)[0];
-    s.parentNode.insertBefore(t,s)}(window,document,'script',
+    s.parentNode.insertBefore(t,s)}(window, document,'script',
     'https://connect.facebook.net/en_US/fbevents.js');
-     fbq('init', '3071007549701397'); 
+    fbq('init', '1165789984794632');
     fbq('track', 'ViewContent');
-    
     </script>
-    <noscript>
-     <img height="1" width="1" 
-    src="https://www.facebook.com/tr?id=3071007549701397&ev=PageView
-    &noscript=1"/>
-    </noscript>
-    <!-- End Facebook Pixel Code -->
+    <noscript><img height="1" width="1" style="display:none"
+    src="https://www.facebook.com/tr?id=1165789984794632&ev=PageView&noscript=1"
+    /></noscript>
+    <!-- End Meta Pixel Code -->
 
     </head>
     
@@ -45,7 +43,7 @@
     <div class="espaco-mobile">
         <img src="{% static 'img/mobile.jpg' %}" alt="" srcset="">
         
-        <a class="reg-mobil3" href="https://solcasino.life/cb2ab781a">
+        <a class="reg-mobil3" href="https://stardacasino.life/c447920d3">
             <input type="button" value="REGISTRAR-SE">
         </a>
 
@@ -58,7 +56,7 @@
                 
                 <b style="font-size: 40px; margin:0;">150% DE BÔNUS <br> DE DEPÓSITO</p>
                 <p class="bonus">+75 giros de GRAÇA! </p>
-                <a href="https://solcasino.life/cb2ab781a">
+                <a href="https://stardacasino.life/c447920d3">
                     <div class="reg">
                         <img src="{% static 'img/wolf_blaze_ticker.png' %}" alt="" srcset="">
                         <input type="button" value="REGISTRAR-SE">
