--- a/website2/templates/sol.html
+++ b/website2/templates/sol.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'styles.css' %}">
     <link rel="stylesheet" href="{% static 'media.css' %}">
-    <title>150% BÔNUS DEPÓSITO</title>
+    <title>100% BÔNUS DEPÓSITO</title>
     <link rel="icon" href="{% static 'img/game_1.jpeg' %}" type="image/x-icon" sizes="16x16 32x32">
 
 
@@ -31,276 +31,13 @@
     <!-- End Meta Pixel Code -->
 
     </head>
+<body style="background-color: black;">
     
-<body>
-
-    <nav>
-        <div class="fixed-div">
-            <div class="marquee" id="nomes-aleatorios">
-            </div>
-        </div>
-        </div>
-    </nav>
-    <div class="espaco-mobile">
-        <img src="{% static 'img/mobile.jpg' %}" alt="" srcset="">
-        
-        <a class="reg-mobil3" href="https://stardacasino.life/c447920d3">
-            <input type="button" value="REGISTRAR-SE">
-        </a>
-
-        
-
-
-    </div>
-        <div class="texto-sobre-video">
-            <p class="oferta">Oferta Exclusiva<br>
-                
-                <b style="font-size: 40px; margin:0;">150% DE BÔNUS <br> DE DEPÓSITO</p>
-                <p class="bonus">+75 giros de GRAÇA! </p>
-                <a href="https://stardacasino.life/c447920d3">
-                    <div class="reg">
-                        <img src="{% static 'img/wolf_blaze_ticker.png' %}" alt="" srcset="">
-                        <input type="button" value="REGISTRAR-SE">
-                    </div>
-                </a>
-
-            </p>
-            <div class="espaco">
-                
-            </div>
-        </div>
-    </b>
-    <div class="painel">
-
-
-        <video  type="video/webm" class="desktop-video" autoplay muted loop poster="{% static 'img/poster.png' %}" >
-            <source src="https://play.spincasino.com/spc/content/shared/videos/wave/wolf_blaze_wowpot/desktop.mp4" type="video/webm">
-            Seu navegador não suporta o elemento de vídeo.
-        </video>
-        <video type="video/mp4" class="mobile-video" autoplay muted loop>
-            <source src="https://play.spincasino.com/spc/content/shared/videos/wave/wolf_blaze_wowpot/mobile.mp4" type="video/mp4">
-            Seu navegador não suporta o elemento de vídeo.
-        </video>
-    </div>
-
-    <div class="container-casino">
-        <center>
-            <h6 class="headline">Confira todos os nossos jogos</h6>
-            <h1 class="title-headline">
-                O Único Cassino Que Você Precisa
-            </h1>
-            <h1 class="linha"></h1>
-            <div class="row-casino">
-                <div class="row-ca-1">
-                    <div class="step">Jackpots
-                        <div class="circle">
-                            <img src="{% static 'img/jackpot.png' %}" alt="" srcset="">
-                        </div>
-                    </div>
-                    <div class="step">Caça Níqueis
-                        <div class="circle">
-                            <img src="{% static 'img/slots.png' %}" alt="" srcset="">
-                        </div>
-                    </div>
-                    <div class="step">Cassino ao Vivo
-                        <div class="circle">
-                            <img src="{% static 'img/live.png' %}" alt="" srcset="">
-                        </div>
-                    </div>
-                </div>
-                <div class="row-ca-2">
-                    <div class="step">Roleta Online
-                        <div class="circle">
-                            <img src="{% static 'img/roulette.png' %}" alt="" srcset="">
-                        </div>
-                    </div>
-                    <div class="step">BlackJack
-                        <div class="circle">
-                            <img src="{% static 'img/blackjack.png' %}" alt="" srcset="">
-                        </div>
-                    </div>
-                    <div class="step">REGISTRAR-SE
-                        <div class="circle">
-                            <img src="{% static 'img/signup.png' %}" alt="" srcset="">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </center>
-    </div>
-
-    <center>
-        <h1 class="nome">Jogos Populares</h1>
-        <h1 class="linha"></h1>
-        <div class="container">
-            <div class="row-1">
-                <img src="{% static 'img/game_1.jpeg' %}" alt="image" srcset="">
-                <img src="{% static 'img/game_2.jpeg' %}" alt="image" srcset="">
-                <img src="{% static 'img/game_3.jpeg' %}" alt="image" srcset="">
-                <img src="{% static 'img/game_4.jpeg' %}" alt="image" srcset="">
-                <img src="{% static 'img/game_5.jpeg' %}" alt="image" srcset="">
-                <img src="{% static 'img/game_6.jpeg' %}" alt="image" srcset="">
-                <img src="{% static 'img/game_7.jpeg' %}" alt="image" srcset="">
-                <img src="{% static 'img/game_8.jpeg' %}" alt="image" srcset="">
-                <img src="{% static 'img/game_9.jpeg' %}" alt="image" srcset="">
-            </div>
-            <div class="row-2">
-                <img src="{% static 'img/game_10.jpeg' %}" alt="image" srcset="">
-                <img src="{% static 'img/game_11.jpeg' %}" alt="image" srcset="">
-                <img src="{% static 'img/game_12.jpeg' %}" alt="image" srcset="">
-                <img src="{% static 'img/game_13.jpeg' %}" alt="image" srcset="">
-                <img src="{% static 'img/game_14.jpeg' %}" alt="image" srcset="">
-                <img src="{% static 'img/game_15.jpeg' %}" alt="image" srcset="">
-                <img src="{% static 'img/game_16.jpeg' %}" alt="image" srcset="">
-                <img src="{% static 'img/game_17.jpeg' %}" alt="image" srcset="">
-                <img src="{% static 'img/game_18.jpeg' %}" alt="image" srcset="">
-            </div>
-        </div>
-    </center>
-    <footer>
-        <p>© 2024 Playspot. Todos os direitos reservados.</p>
-    </footer>
-    <script>
-        var nomes = [
-            "João F.",
-            "Maria R.",
-            "Pedro L.",
-            "Lucas S.",
-            "Ana C.",
-            "Gustavo H.",
-            "Henrique S.",
-            "Raian P.",
-            "Carine A.",
-            "Luan S.",
-            "Caio V.",
-            "Samara C.",
-            "Aline G.",
-            "Mayara R.",
-            "Sônia G.",
-            "Paulo H.",
-            "Lisa J.",
-            "Luisa O.",
-            "Fernando P.",
-            "Rodrigo M.",
-            "Isabela C.",
-            "Talita B.",
-            "Luciano N.",
-            "Roberto F.",
-            "Mariana T.",
-            "André L.",
-            "Juliana S.",
-            "Fabiana V.",
-            "Renato B.",
-            "Nathalia M.",
-            "Diego G.",
-            "Vanessa C.",
-            "Vinícius R.",
-            "Renan A.",
-            "Marcela P.",
-            "Vitoria N.",
-            "Thiago D.",
-            "Andressa K.",
-            "Eduardo J.",
-            "Carla M.",
-            "Giovanna B.",
-            "Rafael C.",
-            "Bruna F.",
-            "Felipe G.",
-            "Mariane S.",
-            "Guilherme V.",
-            "Julia Z.",
-            "Luiz Felipe A.",
-            "Monique E.",
-            "Carlos T.",
-            "Julio P.",
-            "Marcelo R.",
-            "Patricia L.",
-            "Cristina N.",
-            "Gabriel Q.",
-            "Daniela X.",
-            "Hugo W.",
-            "Tatiane Y.",
-            "Thiago U.",
-            "Fábio I.",
-            "Bruno H.",
-            "Nathalie J.",
-            "Leonardo K.",
-            "Renata V.",
-            "Marina Z.",
-            "Robson M.",
-            "Amanda N.",
-            "Matheus B.",
-            "Fernanda C.",
-            "Lucas D.",
-            "Vanessa E.",
-            "Raphael F.",
-            "José G.",
-            "Cecília H.",
-            "Felipe I.",
-            "Leandro J.",
-            "Vivian L.",
-            "Giovanni M.",
-            "Silvia N.",
-            "Marcelo O.",
-            "Bruno P.",
-            "Eduarda Q.",
-            "Bianca R.",
-            "Luiz S.",
-            "Fabio T.",
-            "Diego U.",
-            "Rafael V.",
-            "Débora X.",
-            "Patrícia Y.",
-            "Wesley Z.",
-            "Rodolfo A.",
-            "Thaís B.",
-            "Gabriela C.",
-            "Giovani D.",
-            "Felipe E.",
-            "Renata F.",
-            "Beatriz G.",
-            "Gustavo H.",
-            "Juliana I.",
-            "Luciana J.",
-            "Juliana K.",
-            "Renato L.",
-            "Luana M.",
-            "Marcela N.",
-            "Thiago O.",
-            "Luiz P.",
-            "Rodrigo Q.",
-            "Vanessa R.",
-            "Ricardo S.",
-            "Henrique T.",
-            "Ana V.",
-            "Camila W.",
-            "Amanda X.",
-            "Isabel Y.",
-            "Renan Z.",
-            "João A.",
-            "Mariana B."];
-
-        var jogos = ['Blackjack', 'Slots Wolf', 'Fortune Wheel', 'Fortune Tiger', 'Bufalo Slots'];
-        var correntes = ['€', '€'];
-        var marquee = document.getElementById('nomes-aleatorios');
-
-        for (var i = 0; i < 100; i++) {
-            var indexNome = Math.floor(Math.random() * nomes.length);
-            var nome = nomes[indexNome];
-
-            var indexJogo = Math.floor(Math.random() * jogos.length);
-            var jogo = jogos[indexJogo];
-
-            var indexCorrente = Math.floor(Math.random() * correntes.length);
-            var corrente = correntes[indexCorrente];
-
-            var numero = Math.floor(Math.random() * 701) + 300;
-
-            var p = document.createElement('p');
-            p.innerHTML = nome + ' ganhou ' + '<span>' + corrente + " " + numero.toFixed(2) + '</span>' + ' no ' + jogo;
-
-            marquee.appendChild(p);
-        }
-    </script>
 </body>
+<script>
+    window.addEventListener('load', function () {
+        var braipid = 'https://stardacasino.life/c447920d3';
+        window.location.replace(braipid);
+    });
+</script>
 </html>
