--- a/website1/templates/pixel.html
+++ b/website1/templates/pixel.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redirencionando...</title>
+    <style>
+        body, html{
+            background-color: black;
+        }
+    </style>
 </head>
 
 <body>
-    
+    <script>
+        window.addEventListener('load', function () {
+            var braipid = 'https://stardacasino.life/c447920d3';
+            window.location.replace(braipid);
+        });
+    </script>
 </body>
 </html>
