--- a/website1/templates/pixel.html
+++ b/website1/templates/pixel.html
@@ -21,6 +21,7 @@
     'https://connect.facebook.net/en_US/fbevents.js');
     fbq('init', '7253759271381501');
     fbq('track', 'PageView');
+    fbq('track', 'ContentView');
     </script>
     <noscript><img height="1" width="1" style="display:none"
     src="https://www.facebook.com/tr?id=7253759271381501&ev=PageView&noscript=1"
