--- a/website1/templates/pixel.html
+++ b/website1/templates/pixel.html
@@ -9,6 +9,7 @@
             background-color: black;
         }
     </style>
+
 <!-- Meta Pixel Code -->
 <script>
 !function(f,b,e,v,n,t,s)
@@ -20,6 +21,7 @@ t.src=v;s=b.getElementsByTagName(e)[0];
 s.parentNode.insertBefore(t,s)}(window, document,'script',
 'https://connect.facebook.net/en_US/fbevents.js');
 fbq('init', '380174231651710');
+fbq('track', 'SubscribedButtonClick');
 fbq('track', 'ViewContent');
 </script>
 <noscript><img height="1" width="1" style="display:none"
