--- a/website1/templates/pt.html
+++ b/website1/templates/pt.html
@@ -49,7 +49,7 @@
     <div class="espaco-mobile">
         <img src="{% static 'img/mobile2.png' %}" alt="" srcset="">
         
-        <a class="reg-mobil3" href="{% url 'pixel' %}">
+        <a class="reg-mobil3" href="https://solcasino.life/cb2ab781a">
             <input type="button" value="REGISTRAR-SE">
         </a>
 
@@ -75,7 +75,7 @@
                 
                 <b style="font-size: 40px; margin:0;">100% DE BÔNUS <br> DE DEPÓSITO</p>
                 <p class="bonus">+75 giros de GRAÇA! </p>
-                <a href="{% url 'pixel'%}">
+                <a href="https://solcasino.life/cb2ab781a">
                     <div class="reg">
                         <img src="{% static 'img/wolf_blaze_ticker.png' %}" alt="" srcset="">
                         <input type="button" value="REGISTRAR-SE">
@@ -150,7 +150,7 @@
     <center>
         <h1 class="nome">Jogos Populares</h1>
         <h1 class="linha"></h1>
-        <a href="{% url 'pixel'%}" target="_blank" rel="noopener noreferrer">
+        <a href="https://solcasino.life/cb2ab781a" target="_blank" rel="noopener noreferrer">
             <div class="container">
                 <div class="row-1">
                     <img src="{% static 'img/game_1.jpeg' %}" alt="image" srcset="">
